Fix card alignment issue on desktop

--- a/app/assets/stylesheets/product.css
+++ b/app/assets/stylesheets/product.css
@@ -206,6 +206,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 230px;
 }
 
 .product-wrapper {
